Page MenuHome GnuPG

--quick-adduid removes signing capability
Closed, ResolvedPublic

Description

Using --quick-adduid causes the signing capability to disappear. An example:

$ gpg --quick-gen-key 'Foo <foo@example.org>'
About to create a key for:

    "Foo <foo@example.org>"

Continue? (Y/n) y
gpg: key 4B3BFF8DDE5327F6 marked as ultimately trusted
gpg: revocation certificate stored as
'/home/us/neal/work/gpg/test/openpgp-revocs.d/69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6.rev'
public and secret key created and signed.

pub rsa2048 2016-09-22 [SC] <----------------- SC

69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6
69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6

uid Foo <foo@example.org>
sub rsa2048 2016-09-22 [E]

$ gpg -K 69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6
sec rsa2048 2016-09-22 [SC]

69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6

uid [ultimate] Foo <foo@example.org>
ssb rsa2048 2016-09-22 [E]

$ gpg --quick-adduid 69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6 'foo@example.com'
$ gpg -K 69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6
gpg: NOTE: THIS IS A DEVELOPMENT VERSION!
gpg: It is only intended for test purposes and should NOT be
gpg: used in a production environment or with production keys!
sec rsa2048 2016-09-22 [C] <----------------- C

69C1A22AC1A3626E9541CCF24B3BFF8DDE5327F6

uid [ultimate] foo@example.com
uid [ultimate] Foo <foo@example.org>
ssb rsa2048 2016-09-22 [E]

Event Timeline

neal claimed this task.

Fixed in df5353b. Also added a test.